Fix display of user image on profile page, no longer square and squished if it's a tall image.

--- a/app/stylesheets/_profile.sass
+++ b/app/stylesheets/_profile.sass
@@ -1,30 +1,25 @@
 .profile-header
-  position: relative
   margin: 0 0 25px 0
 
   .avatar
-    position: absolute
-    top: -75px
     left: 0
     background-color: white
-    // margin-top: -130px
-    // margin: -130px 0 0 0
     border: 1px solid #444
     padding: 4px
     margin: 0 0 0 25px
+    display: inline-block
     img
       display: block
 
   .band
     // we don't know how tall the profile pic will be
     // so let it flow down and pull the band up into the picture
-    // margin-top: -46px This was breaking layout
+    margin-top: -46px
     background-color: $light-green
     border: 1px solid #555
     border-left: none
     border-right: none
     padding: 20px 25px 20px 150px
-    margin: 70px 0 0
     h1
       font-size: 20px
 
